--- a/resume.Rmd
+++ b/resume.Rmd
@@ -1,11 +1,10 @@
 ---
-title: Nick Strayer's Resume"
-author: Nick Strayer
+title: Gregorio Salcedo Resume"
+author:Gregorio Salcedo
 date: "`r Sys.Date()`"
 output:
   pagedown::html_resume:
     css: ['css/custom_resume.css', 'css/styles.css', 'resume']
-    # set it to true for a self-contained HTML page but it'll take longer to render
     self_contained: true
 ---
 
@@ -34,8 +33,9 @@ position_data <- read_csv('positions.csv') %>%
   mutate(
     # Build some custom sections by collapsing others
     section = case_when(
-      section %in% c('research_positions', 'industry_positions') ~ 'positions', 
-      section %in% c('data_science_writings', 'by_me_press') ~ 'writings',
+      section %in% c('positions') ~ 'positions', 
+      section %in% c('data_science_projects') ~ 'projects',
+      section %in% c('education') ~ 'education', 
       TRUE ~ section
     )
   ) 
@@ -47,18 +47,18 @@ Aside
 ================================================================================
 
 
-![logo](beta_dist.png){width=100%}
+![logo](logo.png){width=100%}
 
 Contact {#contact}
 --------------------------------------------------------------------------------
 
 
 
-- <i class="fa fa-envelope"></i> nick.strayer@gmail.com
-- <i class="fa fa-twitter"></i> NicholasStrayer
-- <i class="fa fa-github"></i> github.com/nstrayer
-- <i class="fa fa-link"></i> [nickstrayer.me](http://nickstrayer.me/)
-- <i class="fa fa-phone"></i> (734) 645-0110
+- <i class="fa fa-envelope"></i> gs@lafilmingcompany.com
+- <i class="fa fa-twitter"></i> Oriocrumbs
+- <i class="fa fa-github"></i> github.com/gregoriosalcedo
+- <i class="fa fa-link"></i> [nickstrayer.me](http://Gregoriosalcedo.com/)
+- <i class="fa fa-phone"></i> (415) 712-0110
 
 
 
@@ -69,13 +69,11 @@ Language Skills {#skills}
 ```{r}
 skills <- tribble(
   ~skill,               ~level,
-  "R",                  5,
-  "Javascript (d3.js)", 4.5,
+  "R",                  4,
+  "Javascript (d3.js)", 3,
   "Python",             4,
-  "Bash",               3.5,
   "SQL",                3,
-  "C++",                3,
-  "AWK",                3
+  "HTML/CSS",           4,
 )
 build_skill_bars(skills)
 ```
@@ -85,18 +83,18 @@ build_skill_bars(skills)
 Open Source Contributions {#open-source}
 --------------------------------------------------------------------------------
 
-All projects available at `github.com/nstrayer/<name>`
+All projects available at `https://gregoriosalcedo.com/`
 
 
-- `shinysense`: R package to use sensor data in Shiny apps
-- `tuftesque`: Hugo theme (behind LiveFreeOrDichotomize.com)
-- `slid3r`: D3 add-on for fully svg slider inputs
+- `Design`: A look into my Design Portfolio
+- `Data & Web`: Web-Dev code builds
+- `Content`: Work as a Creative Director 
 
 
 More info {#more-info}
 --------------------------------------------------------------------------------
 
-See full CV at nickstrayer.me/cv for more complete list of positions and publications.
+See full CV at https://www.linkedin.com/in/gregoriosalcedo/ for more complete list of projects.
 
 
 Disclaimer {#disclaimer}
@@ -104,7 +102,7 @@ Disclaimer {#disclaimer}
 
 Made w/ [**pagedown**](https://github.com/rstudio/pagedown). 
 
-Source code: [github.com/nstrayer/cv](https://github.com/nstrayer/cv).
+Source code: [github.com](https://github.com/GregorioSalcedo/my-cv.git).
 
 Last updated on `r Sys.Date()`.
 
@@ -114,13 +112,11 @@ Last updated on `r Sys.Date()`.
 Main
 ================================================================================
 
-Nick Strayer {#title}
+Gregorio Salcedo {#title}
 --------------------------------------------------------------------------------
 
 ```{r}
-intro_text <- "I have made [visualizations viewed by hundreds of thousands of people](https://www.nytimes.com/interactive/2016/08/26/us/college-student-migration.html), [sped up query times for 25 terabytes of data by an average of 4,800 times](https://livefreeordichotomize.com/2019/06/04/using_awk_and_r_to_parse_25tb/), and built [packages for R](https://github.com/nstrayer/shinysense) that let you [do magic](http://nickstrayer.me/dataDayTexas/).
-
-Currently searching for a data science position that allows me to build tools using visualization and machine learning to help people explore and understand their data. 
+intro_text <- "Driven Creative Director, Developer, and Data Engineer with extensive experience in content management, data analysis, and user-centered design. With a strong technical foundation and a passion for innovation, I am eager to contribute to a mission focused on understanding user needs through advanced research methodologies and streamlined management processes. My expertise in leading marketing strategies, project management, product design, and harnessing data insights from major companies equips me to foster impactful, creative solutions that resonate with users in fast-paced, evolving environments.
 "
 
 
@@ -150,7 +146,7 @@ Selected Writing {data-icon=newspaper}
 
 
 ```{r}
-position_data %>% print_section('writings')
+position_data %>% print_section('projects')
 ```
 
 
